--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 </head>
 <body>
+    <img src="/img/topo.png" class="template" />
     <div id="dxp_template">
         <div id="dxp_header">
             <dl id="dxp_categories" class="nav nav-tabs" role="tablist">
@@ -25,7 +26,7 @@
         </div>
     </div>
 
-
+    <img src="/img/footer.jpg" class="template" />
 <script src="js/jquery-3.7.1.min.js"></script>
 <script src="owlcarousel/owl.carousel.min.js"></script>
 </body>
