--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="dxp_template">
         <div id="dxp_header">
             <dl id="dxp_categories" class="nav nav-tabs" role="tablist">
-                <dd class="categoryActive nav-item categoryActive-01" id="0" onClick='javascript:categoryClick("0","#");'>NOSSAS RECOMENDAÇÕES</dd>
+                <dd class="categoryActive nav-item categoryActive-01" id="0" onClick='javascript:categoryClick("0","#");'>OUR RECOMMENDATIONS</dd>
                 
             </dl>
         </div>
