--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-    <img src="./categoriesRecs/img/topo.png" class="template" />
+    <img src="./img/topo.png" class="template" />
     <div id="dxp_template">
         <div id="dxp_header">
             <dl id="dxp_categories" class="nav nav-tabs" role="tablist">
@@ -26,7 +26,7 @@
         </div>
     </div>
 
-    <img src=./categoriesRecs/img/footer.jpg" class="template" />
+    <img src=./img/footer.jpg" class="template" />
 <script src="js/jquery-3.7.1.min.js"></script>
 <script src="owlcarousel/owl.carousel.min.js"></script>
 </body>
