--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     </div>
 
-    <img src=./img/footer.jpg" class="template" />
+    <img src="./img/footer.jpg" class="template" />
 <script src="js/jquery-3.7.1.min.js"></script>
 <script src="owlcarousel/owl.carousel.min.js"></script>
 </body>
