--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="js/script.js" type="text/javascript"></script>
 
 </head>
-<body>
+<body onLoad="profileCheck();">
     <img src="./img/topo.png" class="template" />
     <div id="dxp_template">
         <div id="dxp_header">
@@ -27,6 +27,21 @@
     </div>
 
     <img src="./img/footer.jpg" class="template" />
+
+
+    <div id="dxp-selector">
+        <select id="profiles" onChange="refreshProfile();">
+            <option id="newUser" value="newUser">New User</option>
+            <option id="userWomen" value="userWomen">Women</option>
+            <option id="userMen" value="userMen">Men</option>
+            <option id="userHome" value="userHome">Home</option>
+            <option id="userKids" value="userKids">Kids</option>
+            <option id="userEletronics" value="userEletronics">Eletronics</option>
+            <option id="userBeauty" value="userBeauty">Beauty</option>
+            <option id="userShoes" value="userShoes">Shoes</option>
+            <option id="userGeek" value="userGeek">Geek</option>
+        </select>
+    </div>
 <script src="js/jquery-3.7.1.min.js"></script>
 <script src="owlcarousel/owl.carousel.min.js"></script>
 </body>
