--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="dxp_template">
         <div id="dxp_header">
             <dl id="dxp_categories" class="nav nav-tabs" role="tablist">
-                <dd class="categoryActive nav-item categoryActive-01" id="0" onClick='javascript:categoryClick("0","#");'>OUR RECOMMENDATIONS</dd>
+                <dd class="categoryActive nav-item categoryActive-01" id="0" onClick='javascript:categoryClick("0","#");'>NOSSAS RECOMENDAÇÕES</dd>
                 
             </dl>
         </div>
@@ -41,6 +41,7 @@
             <option id="userBeauty" value="userBeauty">Beauty</option>
             <option id="userShoes" value="userShoes">Shoes</option>
             <option id="userGeek" value="userGeek">Geek</option>
+            <option id="userMaes" value="userMaes">Mães</option>
         </select>
     </div>
 <script src="js/jquery-3.7.1.min.js"></script>
